# wik-notes

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/wik/: __init__.py  app.css  app.py
